@@ -1,3 +1,0 @@
-Points3d.default <-
-function(x,...) scat3d( x,..., clear =FALSE)
-
