@@ -1,3 +1,0 @@
-Points3d.formula <-
-function(x,...) Plot3d(x, ... , clear = FALSE)
-
