@@ -1,15 +1,21 @@
 \name{Points3d}
 \Rdversion{1.1}
 \alias{Points3d}
+\alias{Points3d.default}
+\alias{Points3d.formula}
 %- Also NEED an '\alias' for EACH other topic documented here.
 \title{
 Plot points in 3D
 }
 \description{
-%%  ~~ A concise (1-5 lines) description of what the function does. ~~
+Plot points in 3D
 }
 \usage{
 Points3d(x, ...)
+
+\method{Points3d}{default}(x, ...)
+
+\method{Points3d}{formula}(x, ...)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -21,37 +27,35 @@ Points3d(x, ...)
 }
 }
 \details{
-%%  ~~ If necessary, more details than the description above ~~
+This is just a stub, awaiting further development.
 }
 \value{
+None
 %%  ~Describe the value returned
 %%  If it is a LIST, use
 %%  \item{comp1 }{Description of 'comp1'}
 %%  \item{comp2 }{Description of 'comp2'}
 %% ...
 }
-\references{
+%\references{
 %% ~put references to the literature/web site here ~
-}
+%}
 \author{
 Georges Monette
 }
-\note{
+%\note{
 %%  ~~further notes~~
-}
+%}
 
 %% ~Make other sections like Warning with \section{Warning }{....} ~
 
 \seealso{
-%% ~~objects to See Also as \code{\link{help}}, ~~~
+\code{\link{Plot3d}}
 }
 \examples{
-##---- Should be DIRECTLY executable !! ----
-##-- ==>  Define data, use random,
-##--	or do  help(data=index)  for the standard data sets.
 
 ## The function is currently defined as
-function(x,...) UseMethod("Points3d")
+## function(x,...) UseMethod("Points3d")
 }
 % Add one or more standard keywords, see file 'KEYWORDS' in the
 % R documentation directory.
